# resume-analyzer

./: .gitignore  README.md  extractor.py  llm.py  main.py  models.py  pdf.py  pyproject.toml  qa.py  rag.py
tests/: test_models.py
