[project]
name = "resume-analyzer"
version = "0.1.0"
description = "Analyze PDF resumes using RAG and LLMs."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.5.0",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
